correct package name
Signed-off-by: liqingjht <liqingjht@163.com>

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Pretty-Mailman-patch",
+  "name": "pretty-mailman-patch",
   "version": "1.0.1",
   "author": "liqingjht",
   "description": "format and highlight patch of mailman",
